--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,10 +1,19 @@
 {% extends "layout.html" %}
 
-{% block script %}{% endblock %}
+{% block script %}
+<script src="{{ url_for('static', filename='admin.js') }}"></script>
+{% endblock %}
 
 {% block body %}
-    <div class="container text-center">
-        <h3>Set nth interval and discount code</h3>
-        
+    <div class="container text-left">
+        <h3>Set new nth interval and discount code</h3>
+
+        <label for="nth">Set nth: </label>
+        <input type="number" id="nth" placeholder="Enter n">
+        <br>
+
+        <label for="disCode">Set discount code: </label>
+        <input type="text" id="disCode" placeholder="Enter code"><br>
+        <button type="button" class="btn btn-primary" disabled>Set for All</button>
     </div>
 {% endblock %}
