--- a/templates/admin.html
+++ b/templates/admin.html
@@ -14,6 +14,11 @@
 
         <label for="disCode">Set discount code: </label>
         <input type="text" id="disCode" placeholder="Enter code"><br>
-        <button type="button" class="btn btn-primary" disabled>Set for All</button>
+        <button type="button" id="setAll" class="btn btn-primary">Set for All</button>
+    </div><br>
+
+    <div class="container text-left">
+        <h3>Current report (refresh page to update report)</h3>
+        <p id="currentReport"></p>
     </div>
 {% endblock %}
