--- a/templates/customer.html
+++ b/templates/customer.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block script %}
-<script src="{{ url_for('static', filename='store.js') }}"></script>
+<script src="{{ url_for('static', filename='customer.js') }}"></script>
 {% endblock %}
 
 {% block body %}
