--- a/templates/customer.html
+++ b/templates/customer.html
@@ -8,6 +8,11 @@
     <div class="container text-center">
         <h4>Would you like to buy more cheese?</h4>
         <button type="button" id="buyMore" class="btn btn-warning btn-large">YES PLEASE!</button>
-        <br>
+        <br><br>
+    </div>
+
+    <div class="container text-center">
+        COUPON AVAILABILITY:
+        <h4 id="hasCoupon"></h4>
     </div>
 {% endblock %}
