--- a/templates/customer.html
+++ b/templates/customer.html
@@ -14,5 +14,6 @@
     <div class="container text-center">
         COUPON AVAILABILITY:
         <h4 id="hasCoupon"></h4>
+        <button type="button" id="applyCoupon" class="btn btn-primary">Apply</button>
     </div>
 {% endblock %}
