--- a/templates/customer.html
+++ b/templates/customer.html
@@ -14,6 +14,8 @@
     <div class="container text-center">
         COUPON AVAILABILITY:
         <h4 id="hasCoupon"></h4>
-        <button type="button" id="applyCoupon" class="btn btn-primary">Apply</button>
+
+        <input type="checkbox" id="applyCoupon">
+        <label for="applyCoupon">Apply coupon</label>
     </div>
 {% endblock %}
